--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Rolling Dice</title>
 </head>
 
-<body onload="Roll()">
+<body>
 
 <h1 id="winner">Who is the Winner!</h1>
 <div class="center">
