--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="icon" href="img/icondice.png" />
   <link rel="stylesheet" type="text/css" href="stylesheet/stylesheet.css">
   <title>Rolling Dice</title>
 </head>
